--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <group android:id="@+id/bottom_item">
+        <item
+            android:id="@+id/nav_tasks"
+            android:icon="@drawable/ic_baseline_format_list_numbered_24"
+            android:title="@string/action_tasks"
+            />
+        <item
+            android:id="@+id/nav_search"
+            android:icon="@drawable/ic_baseline_search_24"
+            android:title="@string/action_search" />
+        <item
+            android:id="@+id/nav_create"
+            android:icon="@drawable/ic_baseline_add_24"
+            android:title="@string/action_create" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_baseline_settings_24"
+            android:title="@string/action_settings" />
 
-    <item
-        android:id="@+id/nav_tasks"
-        android:icon="@drawable/ic_baseline_format_list_numbered_24"
-        android:title="@string/action_tasks"/>
-    <item
-        android:id="@+id/nav_search"
-        android:icon="@drawable/ic_baseline_search_24"
-        android:title="@string/action_search" />
-    <item
-        android:id="@+id/nav_create"
-        android:icon="@drawable/ic_baseline_add_24"
-        android:title="@string/action_create" />
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="@string/action_settings"/>
-    <item
-        android:id="@+id/nav_about"
-        android:icon="@drawable/ic_baseline_help_24"
-        android:title="@string/action_about"/>
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/ic_baseline_help_24"
+            android:title="@string/action_about" />
+    </group>
+
 
 </menu>
