--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -11,9 +11,8 @@
             android:icon="@drawable/ic_baseline_search_24"
             android:title="@string/action_search" />
         <item
-            android:id="@+id/nav_create"
-            android:icon="@drawable/ic_baseline_add_24"
-            android:title="@string/action_create" />
+            android:id="@+id/placeholder_fab_create"
+            android:title="" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings_24"
